fixed word-overflow in long posts

--- a/css/posts.css
+++ b/css/posts.css
@@ -63,9 +63,11 @@ button {
   margin-top: 10px;
   margin-bottom: 10px;
   border-radius: 10px;
+  overflow-wrap: break-word;
 }
 
 #post-text, button {
   border-radius: 5px;
   resize: none;
+  overflow-wrap: break-word;
 }
